--- a/assets/css/scss/_about.scss
+++ b/assets/css/scss/_about.scss
@@ -26,3 +26,10 @@
         }
     }
 }
+
+
+@include respond-max(md){
+    .about-us__content {
+        padding-right: unset;
+    }
+}
