--- a/assets/css/scss/_technical-services.scss
+++ b/assets/css/scss/_technical-services.scss
@@ -9,6 +9,14 @@
         background-color: $primary-grey-dark-2;
         padding: $main-gutter/2 $main-gutter;
         margin-left:0;
+
+        @include respond(lg){
+            &:hover {
+                box-shadow: 1px 2px 2px 1px rgba($primary-blue-dark, 0.5);
+                background-color: darken($primary-grey-dark-2, 5);
+                font-weight: 700;
+            }
+        }
     }
 
     .flex-50 {
